# follychess

./: .bazelrc  MODULE.bazel
benchmarks/: BUILD  attacks.h  attacks_benchmark.cc  attacks_benchmark_latest.txt  attacks_test.cc  generate_moves_benchmark.cc  generate_moves_benchmark_latest.txt  moves_benchmark.cc  moves_benchmark_latest.txt  search_benchmark.cc  search_benchmark_latest.txt
cli/: BUILD  cli.cc  cli.h  cli_test.cc  command.cc  command.h  follychess.cc  options.cc  options.h
cli/commands/: BUILD  display.h  isready_command.h  perft_command.h  position_command.cc  position_command.h  uci_command.h
engine/: BUILD  attacks.h  attacks_test.cc  bitboard.cc  bitboard.h  bitboard_test.cc  castling.h  castling_test.cc  game.cc  game.h  game_test.cc  line.h  line_test.cc  magic.cc  magic.h  magic_main.cc  move.cc  move.h  move_generator.cc  move_generator.h  move_generator_test.cc  move_test.cc  perft.cc  perft.h  perft_test.cc  position.cc  position.h  position_main.cc  position_test.cc  scoped_move.h  testing.cc  testing.h  testing_test.cc  types.cc  types.h  types_test.cc  zobrist.h  zobrist_test.cc
scripts/: BUILD  compare.py
search/: BUILD  evaluation.cc  evaluation.h  evaluation_test.cc  history_heuristic.h  killer_moves.h  killer_moves_test.cc  move_ordering.cc  move_ordering.h  move_ordering_test.cc  phase.cc  phase.h  phase_test.cc  principal_variation.h  principal_variation_test.cc  search.cc  search.h  search_test.cc  transposition.cc  transposition.h  transposition_test.cc
